// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add should add entity 1`] = `
Object {
  "$entities": Object {
    "1": Object {
      "completed": false,
      "id": 1,
      "title": "todo 1",
    },
  },
  "$ids": Array [
    1,
  ],
}
`;

exports[`add should add multiple entities 1`] = `
Object {
  "$entities": Object {
    "1": Object {
      "completed": false,
      "id": 1,
      "title": "todo 1",
    },
    "2": Object {
      "completed": false,
      "id": 2,
      "title": "todo 2",
    },
  },
  "$ids": Array [
    1,
    2,
  ],
}
`;

exports[`add should overwrite entities 1`] = `
Object {
  "$entities": Object {
    "3": Object {
      "completed": false,
      "id": 3,
      "title": "todo 3",
    },
    "4": Object {
      "completed": false,
      "id": 4,
      "title": "todo 4",
    },
  },
  "$ids": Array [
    3,
    4,
  ],
}
`;

exports[`add should prepend entities 1`] = `
Object {
  "$entities": Object {
    "1": Object {
      "completed": false,
      "id": 1,
      "title": "todo 1",
    },
    "2": Object {
      "completed": false,
      "id": 2,
      "title": "todo 2",
    },
    "3": Object {
      "completed": false,
      "id": 3,
      "title": "todo 3",
    },
    "4": Object {
      "completed": false,
      "id": 4,
      "title": "todo 4",
    },
  },
  "$ids": Array [
    3,
    4,
    1,
    2,
  ],
}
`;
